--- a/index.html
+++ b/index.html
@@ -39,17 +39,58 @@
           <div class="flower__line__leaf flower__line__leaf--6"></div>
         </div>
       </div>
-  
-      <div class="flower flower--2">
-        <div class="flower__leafs flower__leafs--2">
-          <div class="flower__leaf flower__leaf--1"></div>
-          <div class="flower__leaf flower__leaf--2"></div>
-          <div class="flower__leaf flower__leaf--3"></div>
-          <div class="flower__leaf flower__leaf--4"></div>
-          <div class="flower__white-circle"></div>
-  
-          <div class="flower__light flower__light--1"></div>
-          <div class="flower__light flower__light--2"></div>
+      
+  <!-- Add the audio element here -->
+<audio id="background-audio" hidden>
+  <source src="./flower.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
+<div class="flower flower--2">
+  <div class="flower__leafs flower__leafs--2">
+    <div class="flower__leaf flower__leaf--1"></div>
+    <div class="flower__leaf flower__leaf--2"></div>
+    <div class="flower__leaf flower__leaf--3"></div>
+    <div class="flower__leaf flower__leaf--4"></div>
+    <div class="flower__white-circle"></div>
+
+    <div class="flower__light flower__light--1"></div>
+    <div class="flower__light flower__light--2"></div>
+
+<!-- Add the button here -->
+<button id="play-button" onclick="toggleAudio()">Play Audio</button>
+
+<script>
+  function toggleAudio() {
+    var audio = document.getElementById('background-audio');
+    var button = document.getElementById('play-button');
+    if (audio.paused) {
+      audio.play();
+      button.textContent = 'Pause Audio';
+    } else {
+      audio.pause();
+      button.textContent = 'Play Audio';
+    }
+  }
+</script>
+
+<style>
+  #play-button {
+    position: absolute;
+    left: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+    padding: 10px 20px;
+    background-color: purple;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+
+  #play-button:hover {
+    background-color: #800080;
+  }
+</style>
           <div class="flower__light flower__light--3"></div>
           <div class="flower__light flower__light--4"></div>
           <div class="flower__light flower__light--5"></div>
